--- a/public/source/css/styles.css
+++ b/public/source/css/styles.css
@@ -2,3 +2,11 @@
     padding: 0;
     margin: 0;
 }
+
+.myparagraph {
+    color:rgb(6, 209, 245);
+    background-color:rgb(15, 15, 214);
+    width:  5rem;
+    padding: 0.4rem;
+    margin: 1rem;
+}
